--- a/index.html
+++ b/index.html
@@ -1,63 +1,31 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-
-	<title>BBB/jquery-canvasspinner @ GitHub</title>
-	
-	<style type="text/css">
-		body {
-  		margin-top: 1.0em;
-  		background-color: #53ac08;
-		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #ffffff;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-		h1 { font-size: 3.8em; color: #ac53f7; margin-bottom: 3px; }
-		h1 .small { font-size: 0.4em; }
-		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #ac53f7; }
-    h3 { text-align: center; color: #ac53f7; }
-    a { color: #ac53f7; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-		pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-	</style>
-	
-</head>
-
-<body>
-  <a href="http://github.com/BBB/jquery-canvasspinner"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-
-  <div id="container">
-
-    <div class="download">
-      <a href="http://github.com/BBB/jquery-canvasspinner/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/BBB/jquery-canvasspinner/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
-    <h1><a href="http://github.com/BBB/jquery-canvasspinner">jquery-canvasspinner</a>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>BBB/jquery-canvasspinner @ GitHub</title>
+		<link href="css/reset.css" media="screen" rel="stylesheet" type="text/css" />
+		<link href="css/global.css" media="screen" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
+		<div id="wrapper">
+			<h1><a href="http://github.com/BBB/jquery-canvasspinner">jQuery CanvasSpinner</a>
       <span class="small">by <a href="http://github.com/BBB">BBB</a></span></h1>
+			
+      <div class="download">
+        <a href="http://github.com/BBB/jquery-canvasspinner/zipball/master">
+          <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
+        <a href="http://github.com/BBB/jquery-canvasspinner/tarball/master">
+          <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+      </div>
 
-    <div class="description">
-      A HTML5 <canvas /> based loading spinner, with .gif fallback
-    </div>
+      <div class="description">
+        <p>A HTML5 <pre><code><canvas /></code></p> based loading spinner, with .gif fallback
+      </div>
 
     <h2>Dependencies</h2>
 <p>jQuery 1.3+</p>
 <h2>Authors</h2>
-<p>Ollie Relph (ollie@relph.me)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Ollie Relph (ollie+github@relph.me)<br/>      </p>
+<p>Ollie Relph (ollie@relph.me)</p>
 
 
     <h2>Download</h2>
@@ -74,8 +42,14 @@
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/BBB/jquery-canvasspinner">BBB/jquery-canvasspinner</a>
     </div>
-
-  </div>
+<!-- <pre><code><span class="keyword">$</span>(<span class="string">'ul.imagescrubber.skip-y'</span>).imagescrubber({
+	width: <span class="constant">380</span>,
+	height : <span class="constant">270</span>,
+	items : <span class="string">'li'</span>,
+	axis : <span class="string">'x'</span>
+});</code></pre> -->
+	​	​	</div>
+​	​	​</div>
 
   <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
@@ -86,5 +60,5 @@ try {
 var pageTracker = _gat._getTracker("UA-19861664-1");
 pageTracker._trackPageview();
 } catch(err) {}</script>
-</body>
+	</body>
 </html>
