--- a/index.html
+++ b/index.html
@@ -11,23 +11,24 @@
 			<h1><a href="http://github.com/BBB/jquery-canvasspinner">jQuery CanvasSpinner</a>
       <span class="small">by <a href="http://github.com/BBB">BBB</a></span></h1>
 			
-      <div class="download">
+      <div class="download polaroid">
         <a href="http://github.com/BBB/jquery-canvasspinner/zipball/master">
           <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
         <a href="http://github.com/BBB/jquery-canvasspinner/tarball/master">
           <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
       </div>
 
-      <div class="description">
-        <p>A HTML5 <pre><code><canvas /></code></p> based loading spinner, with .gif fallback
+      <div class="description polaroid">
+        <p>A HTML5 <pre><canvas /></pre> based loading spinner, with .gif fallback
       </div>
-
+      <div class="polaroid">
     <h2>Dependencies</h2>
 <p>jQuery 1.3+</p>
 <h2>Authors</h2>
 <p>Ollie Relph (ollie@relph.me)</p>
+</div>
 
-
+      <div class="polaroid">
     <h2>Download</h2>
     <p>
       You can download this project in either
@@ -38,8 +39,8 @@
       by running:
       <pre>$ git clone git://github.com/BBB/jquery-canvasspinner</pre>
     </p>
-
-    <div class="footer">
+    </div>
+    <div class="footer polaroid">
       get the source code on GitHub : <a href="http://github.com/BBB/jquery-canvasspinner">BBB/jquery-canvasspinner</a>
     </div>
 <!-- <pre><code><span class="keyword">$</span>(<span class="string">'ul.imagescrubber.skip-y'</span>).imagescrubber({
