html encoding entities

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
 
       <div class="description polaroid">
-        <p>A HTML5 <pre><canvas /></pre> based loading spinner, with .gif fallback
+        <p>A HTML5 &lt;canvas /&gt; based loading spinner, with .gif fallback
       </div>
       <div class="polaroid">
     <h2>Dependencies</h2>
