formatting code block ready for styling

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
-      <pre>$ <span class="keyword">git</span> <span class="constant">clone</span> <span class="string">git://github.com/BBB/jquery-canvasspinner</span></pre>
+      <pre><code>$ <span class="keyword">git</span> <span class="constant">clone</span> <span class="string">git://github.com/BBB/jquery-canvasspinner</span></code></pre>
     </p>
     </div>
     <div class="footer polaroid">
