formatting code block ready for styling

--- a/index.html
+++ b/index.html
@@ -9,48 +9,48 @@
 	<body>
 		<div id="wrapper">
 			<h1><a href="http://github.com/BBB/jquery-canvasspinner">jQuery CanvasSpinner</a>
-      <span class="small">by <a href="http://github.com/BBB">BBB</a></span></h1>
+	  <span class="small">by <a href="http://github.com/BBB">Ollie Relph</a></span></h1>
 			
-      <div class="download polaroid">
-        <a href="http://github.com/BBB/jquery-canvasspinner/zipball/master">
-          <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-        <a href="http://github.com/BBB/jquery-canvasspinner/tarball/master">
-          <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-      </div>
+	  <div class="download polaroid">
+		<a href="http://github.com/BBB/jquery-canvasspinner/zipball/master">
+		  <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
+		<a href="http://github.com/BBB/jquery-canvasspinner/tarball/master">
+		  <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+	  </div>
 
-      <div class="description polaroid">
-        <p>A HTML5 &lt;canvas /&gt; based loading spinner, with .gif fallback
-      </div>
-      <div class="polaroid">
-    <h2>Dependencies</h2>
-<p>jQuery 1.3+</p>
-<h2>Authors</h2>
-<p>Ollie Relph (ollie@relph.me)</p>
-</div>
+	  <div class="description polaroid">
+		  <p>A HTML5 &lt;canvas /&gt; based loading spinner, with .gif fallback
+	  </div>
+  	<div class="polaroid">
+    	<h2>Dependencies</h2>
+    	<p>jQuery 1.3+</p>
+    	<h2>Authors</h2>
+    	<p>Ollie Relph (ollie@relph.me)</p>
+  	</div>
 
-      <div class="polaroid">
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/BBB/jquery-canvasspinner/zipball/master">zip</a> or
-      <a href="http://github.com/BBB/jquery-canvasspinner/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre><code>$ <span class="keyword">git</span> <span class="constant">clone</span> <span class="string">git://github.com/BBB/jquery-canvasspinner</span></code></pre>
-    </p>
+  	<div class="polaroid">
+    	<h2>Download</h2>
+    	<p>	
+        You can download this project in either
+      	<a href="http://github.com/BBB/jquery-canvasspinner/zipball/master">zip</a> or
+      	<a href="http://github.com/BBB/jquery-canvasspinner/tarball/master">tar</a> formats.
+    	</p>
+    	<p>You can also clone the project with <a href="http://git-scm.com">Git</a>
+    	by running:
+    	<pre><code>$ <span class="keyword">git</span> <span class="constant">clone</span> <span class="string">git://github.com/BBB/jquery-canvasspinner</span></code></pre>
+    	</p>
     </div>
     <div class="footer polaroid">
-      get the source code on GitHub : <a href="http://github.com/BBB/jquery-canvasspinner">BBB/jquery-canvasspinner</a>
-    </div>
-<!-- <pre><code><span class="keyword">$</span>(<span class="string">'ul.imagescrubber.skip-y'</span>).imagescrubber({
-	width: <span class="constant">380</span>,
-	height : <span class="constant">270</span>,
-	items : <span class="string">'li'</span>,
-	axis : <span class="string">'x'</span>
-});</code></pre> -->
+      <p>Get the source code on GitHub : <a href="http://github.com/BBB/jquery-canvasspinner">BBB/jquery-canvasspinner</a></p>
+  	</div>
+  	<!-- <pre><code><span class="keyword">$</span>(<span class="string">'ul.imagescrubber.skip-y'</span>).imagescrubber({
+  	width: <span class="constant">380</span>,
+  	height : <span class="constant">270</span>,
+  	items : <span class="string">'li'</span>,
+  	axis : <span class="string">'x'</span>
+  	});</code></pre> -->
 	​	​	</div>
-​	​	​</div>
+	​	​	​</div>
 
   <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
