--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	  </div>
   	<div class="polaroid">
     	<h2>Dependencies</h2>
-    	<p>jQuery 1.3+</p>
+    	<ul><li>jQuery 1.3+</li></ul>
     	<h2>Authors</h2>
     	<p>Ollie Relph (ollie@relph.me)</p>
   	</div>
