--- a/index.html
+++ b/index.html
@@ -8,16 +8,9 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			<h1><a href="http://github.com/BBB/jquery-canvasspinner">jQuery CanvasSpinner</a>
+			<h1><a href="http://github.com/BBB/jquery-canvasspinner">jQuery CanvasSpinner</a><br />
 	  <span class="small">by <a href="http://github.com/BBB">Ollie Relph</a></span></h1>
 			
-	  <div class="download polaroid">
-		<a href="http://github.com/BBB/jquery-canvasspinner/zipball/master">
-		  <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-		<a href="http://github.com/BBB/jquery-canvasspinner/tarball/master">
-		  <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-	  </div>
-
 	  <div class="description polaroid">
 		  <p>A HTML5 &lt;canvas /&gt; based loading spinner, with .gif fallback
 	  </div>
@@ -30,15 +23,22 @@
 
   	<div class="polaroid">
     	<h2>Download</h2>
+      <div class="download">
+        <a href="http://github.com/BBB/jquery-canvasspinner/zipball/master">
+          <img border="0" width="90" src="http://github.com/images/modules/download/zip.png">
+        </a>
+        <a href="http://github.com/BBB/jquery-canvasspinner/tarball/master">
+          <img border="0" width="90" src="http://github.com/images/modules/download/tar.png">
+        </a>
+      </div>
     	<p>	
         You can download this project in either
       	<a href="http://github.com/BBB/jquery-canvasspinner/zipball/master">zip</a> or
       	<a href="http://github.com/BBB/jquery-canvasspinner/tarball/master">tar</a> formats.
     	</p>
     	<p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-    	by running:
+    	by running:</p>
     	<pre><code>$ <span class="keyword">git</span> <span class="constant">clone</span> <span class="string">git://github.com/BBB/jquery-canvasspinner</span></code></pre>
-    	</p>
     </div>
     <div class="footer polaroid">
       <p>Get the source code on GitHub : <a href="http://github.com/BBB/jquery-canvasspinner">BBB/jquery-canvasspinner</a></p>
