--- a/index.html
+++ b/index.html
@@ -14,16 +14,12 @@
 	  <div class="description polaroid">
 		  <p>A HTML5 &lt;canvas /&gt; based loading spinner, with .gif fallback</p>
 	  </div>
-  	<div class="polaroid">
-    	<h2>Dependencies</h2>
-    	<p>jQuery 1.3+</p>
-    	<h2>Authors</h2>
-    	<p>Ollie Relph (ollie@relph.me)</p>
-  	</div>
-
+  
     <div class="polaroid">
       <h2>Demo</h2>
-      <p>Here shortly</p>
+      <div class="spinner black"></div>
+      <div class="spinner pink"></div>
+      <div class="spinner large"></div>
     </div>
 
     <div class="polaroid">
@@ -63,8 +59,21 @@
   	</div>
 	​	​	</div>
 	​	​	​</div>
-
-  <script type="text/javascript">
+    <!-- JavaScript -->
+    <!-- Grab Google CDN's jQuery. fall back to local if neccessary -->
+    <script type="text/javascript">
+    //<![CDATA[
+    !window.jQuery && document.write('<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"><\/script>')
+    //]]>
+    </script>
+    <script type="text/javascript">
+    //<![CDATA[
+    !window.jQuery && document.write('<script src="js/jquery-1.4.2.min.js"><\/script>')
+    //]]>
+    </script>
+    <script src="js/jquery-spinner.dev.js" type="text/javascript"> </script>
+    <script src="js/script.dev.js" type="text/javascript"> </script>
+    <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
