Styline & adding some demos

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 	  <div class="description polaroid">
 		  <p>A HTML5 &lt;canvas /&gt; based loading spinner, with .gif fallback</p>
 	  </div>
-  
+
     <div class="polaroid">
       <h2>Demo</h2>
-      <div class="spinner black"></div>
-      <div class="spinner pink"></div>
-      <div class="spinner large"></div>
+      <div class="spinner-demo black"></div>
+      <div class="spinner-demo pink"></div>
+      <div class="spinner-demo large"></div>
     </div>
 
     <div class="polaroid">
