Adding a better description

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 	  <span class="small">by <a href="http://github.com/BBB">Ollie Relph</a></span></h1>
 			
 	  <div class="description polaroid">
-		  <p>A HTML5 &lt;canvas /&gt; based loading spinner, with .gif fallback</p>
+      <h2>What?</h2>
+		  <p>A HTML5 &lt;canvas /&gt; based loading spinner, for use within web applications.</p>
+      <h2>Why?</h2>
+        <ul>
+          <li>Scaleable</li>
+          <li>Massively Customizable</li>
+          <li>Lightweight at only 1.2kb (For the minified JS) -- Smaller than most spinner .gifs on <a href="http://ajaxload.info" title="Animated loading gifs">ajaxload.info</a></li>
+          <li>Provides a fallback method for displaying .gifs</li>
+        </ul>
 	  </div>
 
     <div class="polaroid">
