--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			<h1><a href="http://github.com/BBB/jquery-canvasspinner">jQuery CanvasSpinner</a><br />
-	  <span class="small">by <a href="http://github.com/BBB">Ollie Relph</a></span></h1>
+			<h1><a href="http://github.com/BBB/jquery-canvasspinner">jQuery CanvasSpinner</a></h1>
 			
-	  <div class="description polaroid">
+	  <div class="description">
       <h2>What?</h2>
 		  <p>A HTML5 &lt;canvas /&gt; based loading spinner, for use within web applications.</p>
       <h2>Why?</h2>
         <ul>
           <li>Scaleable</li>
+          <li>Supports background transparency</li>
           <li>Massively Customizable</li>
           <li>Lightweight at only 1.2kb (For the minified JS) -- Smaller than most spinner .gifs on <a href="http://ajaxload.info" title="Animated loading gifs">ajaxload.info</a></li>
           <li>Provides a fallback method for displaying .gifs</li>
@@ -24,27 +24,46 @@
 	  </div>
 
     <div class="polaroid">
-      <h2>Demo</h2>
-      <div class="spinner-demo black"></div>
-      <div class="spinner-demo pink"></div>
-      <div class="spinner-demo large"></div>
+      <h2>Demos</h2>
+      <ul id="demos">
+        <li id="spinner-moving">
+        <div></div>
+          <a class="credit" href="http://www.flickr.com/photos/35943421@N00/257641202/" target="_blank">&copy; saipal</a>
+          </li>
+        <li id="spinner-large">
+        <div></div>
+          <a class="credit" href="http://www.flickr.com/photos/91273409@N00/2068370625/" target="_blank">&copy; Eric Hart</a>
+        </li>
+        <li id="spinner-round">
+          <div></div>
+          <a class="credit" href="http://www.flickr.com/photos/20375052@N00/6802513/" target="_blank">&copy; Josef Stuefer</a>
+        </li>
+      </ul>     
     </div>
 
     <div class="polaroid">
       <h2>Usage</h2>
-      <p>Include the .js file in the head of your document:</p>
-      <pre><code>&lt;<span class="keyword">script</span> src=<span class="string">"js/jquery-spinner.dev.js"</span> type=<span class="string">"text/javascript"</span>&gt;&lt;<span class="keyword">/script</span>&gt;</code></pre>
+      <p>Include the jQuery &amp; .js file in your document:</p>
+      <pre><code>&lt;<span class="keyword">script</span> src=<span class="string">"js/jquery.min.js"</span> type=<span class="string">"text/javascript"</span>&gt;&lt;<span class="keyword">/script</span>&gt;<br />&lt;<span class="keyword">script</span> src=<span class="string">"js/jquery-spinner.dev.js"</span> type=<span class="string">"text/javascript"</span>&gt;&lt;<span class="keyword">/script</span>&gt;</code></pre>
       <p>Basic usage. The plugin will automatically size the spinner to fit within the container.</p>
       <pre><code><span class="keyword">$</span>(<span class="string">'div.loading'</span>).spinner();</code></pre>
       <p>With options:</p>
       <pre><code><span class="keyword">$</span>(<span class="string">'div.loading'</span>).spinner({
-      sqr: <span class="constant">40</span>,  // <span class="comment">// The width/ height of the spinner</span>
-      framerate : <span class="constant">10</span>, // <span class="comment">// The number of frames per second</span>
-      spokes : <span class="constant">16</span>, // <span class="comment">// The number of spokes in the spinner</span>
+      sqr: <span class="constant">40</span>,<span class="comment">// The width/ height of the spinner</span>
+      framerate : <span class="constant">10</span>, <span class="comment">// The number of frames per second</span>,
+      rotation : <span class="constant">0</span> <span class="comment">// The number of degrees the spinner 
+                      should rotate per frame</span>
+      spokeCount : <span class="constant">16</span>, <span class="comment">// The number of spokes in the spinner</span>
+      spokeOffset : {
+        inner : <span class="constant">8</span>, <span class="comment">// The inner radius of the spinner in px</span>
+        outer : <span class="constant">15</span> <span class="comment">// The outer radius of the spinner in px</span>
+      },
+      spokeWidth : <span class="constant">3</span> <span class="comment">// The the width of each spoke in px</span>
       colour : <span class="string">'255,255,255'</span>, <span class="comment">// Must be an RGB string</span>
       backup : <span class="string">'images/spinner.gif'</span> <span class="comment">// The path to the backup image</span>
 });</code></pre>
-
+      <p>To Remove a spinner just call:</p>
+      <pre><code><span class="keyword">$</span>(<span class="string">'div.loading'</span>).removeSpinner();</code></pre>
     </div>
   	<div class="polaroid">
     	<h2>Download</h2>
