updating examples to support v1.1, changing the base font

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
       },
       spokeWidth : <span class="constant">3</span> <span class="comment">// The the width of each spoke in px</span>
       colour : <span class="string">'255,255,255'</span>, <span class="comment">// Must be an RGB string</span>
-      backup : <span class="string">'images/spinner.gif'</span> <span class="comment">// The path to the backup image</span>
+      backup : <span class="string">'images/spinner.gif',</span> <span class="comment">// The path to the backup image</span>
+      centered : <span class="constant">true</span> <span class="comment">// Toggles auto centering of the spinner</span>
 });</code></pre>
       <p>To Remove a spinner just call:</p>
       <pre><code><span class="keyword">$</span>(<span class="string">'div.loading'</span>).removeSpinner();</code></pre>
