Minor styling & language tweaks

--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
 		<div id="wrapper">
 			<h1><a href="http://github.com/BBB/jquery-canvasspinner">jQuery CanvasSpinner</a></h1>
 			
-	  <div class="description">
+	  <div class="description polaroid">
       <h2>What?</h2>
 		  <p>A HTML5 &lt;canvas /&gt; based loading spinner, for use within web applications.</p>
-      <h2>Why?</h2>
-        <ul>
-          <li>Scaleable</li>
-          <li>Supports background transparency</li>
-          <li>Massively Customizable</li>
-          <li>Lightweight at only 1.2kb (For the minified JS) -- Smaller than most spinner .gifs on <a href="http://ajaxload.info" title="Animated loading gifs">ajaxload.info</a></li>
-          <li>Provides a fallback method for displaying .gifs</li>
-        </ul>
+      <ul>
+        <li>Easily resizable,</li>
+        <li>Allows background transparency,</li>
+        <li>Massively Customizable,</li>
+        <li>Lightweight at only 1.2kb (For the minified JS) -- Smaller than most spinner .gifs on <a href="http://ajaxload.info" title="Animated loading gifs">ajaxload.info</a>,</li>
+        <li>Backwards compatibility with a method for displaying .gifs</li>
+      </ul>
 	  </div>
 
     <div class="polaroid">
