Updated styling & changed some wording

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 		  <p>A HTML5 &lt;canvas /&gt; based loading spinner, for use within web applications.</p>
       <ul>
         <li>Easily resizable,</li>
-        <li>Allows background transparency,</li>
+        <li>Supports full alpha transparency,</li>
         <li>Massively Customizable,</li>
-        <li>Lightweight at only 1.2kb (For the minified JS) -- Smaller than most spinner .gifs on <a href="http://ajaxload.info" title="Animated loading gifs">ajaxload.info</a>,</li>
-        <li>Backwards compatibility with a method for displaying .gifs</li>
+        <li>Lightweight at only 1.2kb (For the minified JS),</li>
+        <li>Smaller than most spinner .gifs on <a href="http://ajaxload.info" title="Animated loading gifs">ajaxload.info</a>,</li>
+        <li>Backwards compatible with older browsers with a method for displaying .gifs</li>
       </ul>
 	  </div>
 
@@ -43,7 +44,7 @@
     <div class="polaroid">
       <h2>Usage</h2>
       <p>Include the jQuery &amp; .js file in your document:</p>
-      <pre><code>&lt;<span class="keyword">script</span> src=<span class="string">"js/jquery.min.js"</span> type=<span class="string">"text/javascript"</span>&gt;&lt;<span class="keyword">/script</span>&gt;<br />&lt;<span class="keyword">script</span> src=<span class="string">"js/jquery-spinner.dev.js"</span> type=<span class="string">"text/javascript"</span>&gt;&lt;<span class="keyword">/script</span>&gt;</code></pre>
+      <pre><code>&lt;<span class="keyword">script</span> src=<span class="string">"js/jquery.min.js"</span> type=<span class="string">"text/javascript"</span>&gt;&lt;<span class="keyword">/script</span>&gt;<br />&lt;<span class="keyword">script</span> src=<span class="string">"js/jquery-spinner.min.js"</span> type=<span class="string">"text/javascript"</span>&gt;&lt;<span class="keyword">/script</span>&gt;</code></pre>
       <p>Basic usage. The plugin will automatically size the spinner to fit within the container.</p>
       <pre><code><span class="keyword">$</span>(<span class="string">'div.loading'</span>).spinner();</code></pre>
       <p>With options:</p>
