--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       centered : <span class="constant">true</span> <span class="comment">// Toggles auto centering of the spinner</span>
 });</code></pre>
       <p>To Remove a spinner just call:</p>
-      <pre><code><span class="keyword">$</span>(<span class="string">'div.loading'</span>).removeSpinner();</code></pre>
+      <pre><code><span class="keyword">$</span>(<span class="string">'div.loading'</span>).clearSpinner();</code></pre>
     </div>
   	<div class="polaroid">
     	<h2>Download</h2>
